--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@globalart/vue-vkui",
-  "version": "1.0.3",
+  "version": "4.0.0-alpha.2",
   "description": "A vkui library of Vue components",
   "license": "MIT",
   "main": "dist/vue-vkui.common.js",
